Revert "Remove transform from will-change to avoid always visible scrollbar in device settings"
This reverts commit 701a2a16d5e6131f9c67f425691878a0bd63e2dc.

--- a/packages/vscode-extension/src/webview/components/shared/Dropdown.css
+++ b/packages/vscode-extension/src/webview/components/shared/Dropdown.css
@@ -10,7 +10,7 @@ button {
   padding: 4px;
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-  will-change: opacity;
+  will-change: transform, opacity;
   box-shadow: var(--swm-backdrop-shadow);
   max-height: calc(var(--radix-dropdown-menu-content-available-height) - 50px);
   overflow-y: auto;
